# chrome-rs

./: .gitignore  Cargo.toml  README.md
src/: browser.rs  lib.rs  page.rs
