[package]
name = "chrome-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["net"] }
tokio-tungstenite = "0.19.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
